	* fix bug in enumeration of network interfaces on windows
	* fix padfile issue
	* fix PMTUd bug
	* update puff to fix gzip crash

1.0.10 release

	* fixed inverted priority of incoming piece suggestions
	* fixed crash on invalid input in http_parser
	* added a new "preformatted" type to bencode entry variant type
	* fix division by zero in super-seeding logic

1.0.9 release

	* fix issue in checking outgoing interfaces (when that option is enabled)
	* python binding fix for boost-1.60.0
	* optimize enumeration of network interfaces on windows
	* improve reliability of binding listen sockets
	* support SNI in https web seeds and trackers
	* fix unhandled exception in DHT when receiving a DHT packet over IPv6

1.0.8 release

	* fix web seed request size
	* fix bug where web seeds were not used for torrents added by URL
	* fix support for symlinks on windows
	* fix long filename issue (on unixes)
	* fixed performance bug in DHT torrent eviction
	* fixed win64 build (GetFileAttributesEx)
	* fixed bug when deleting files for magnet links before they had metadata

1.0.7 release

	* fix bug where loading settings via load_state() would not trigger all
	  appropriate actions
	* fix bug where 32 bit builds could use more disk cache than the virtual
	  address space (when set to automatic)
	* fix support for torrents with > 500'000 pieces
	* fix ip filter bug when banning peers
	* fix IPv6 IP address resolution in URLs
	* introduce run-time check for torrent info-sections beeing too large
	* fix web seed bug when using proxy and proxy-peer-connections=false
	* fix bug in magnet link parser
	* introduce add_torrent_params flags to merge web seeds with resume data
	  (similar to trackers)
	* fix bug where dont_count_slow_torrents could not be disabled
	* fix fallocate hack on linux (fixes corruption on some architectures)
	* fix auto-manage bug with announce to tracker/lsd/dht limits
	* improve DHT routing table to not create an unbalanced tree